--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
 .App {
     text-align: center;
 }
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
-}
 .App-header {
     background-color: #222;
     padding: 20px;
@@ -19,11 +15,17 @@
     font-size: 14px;
     line-height: 26px;
 }
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+.mainContent {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.recharts-responsive-container {
+    margin-left: -20px;
+}
+.legend-item-0 {
+    margin-left: 50px;
+}
+.toolTipClass {
+    min-height: 80px;
+    /*background-color: white;*/
 }
