--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,15 @@
 .custom-tooltip {
     background-color: white;
     border: 1px solid grey;
+    padding: 5px;
+}
+.datePickerClass {
+    float: left;
+    width: 100%;
+    max-width: 275px;
+}
+.datePickerClass .caret {
+    margin-left: 10px!important;
 }
 .mainContent {
     padding-left: 20px;
